plugins {
    id "java-library"
    id "org.openmicroscopy.project" version "5.7.2"
}

group = "org.openmicroscopy"
version = "5.6.4-SNAPSHOT"

repositories {
    mavenLocal()
    mavenCentral()
}

compileJava {
    options.release = 8
}

dependencies {
    testImplementation("org.testng:testng:7.5")

    api("org.openmicroscopy:omero-romio:5.8.3")

    // Keep these from being exposed to child projects
    implementation("org.apache.commons:commons-lang3:3.18.0")
}

test {
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
    // enable TestNG support (default is JUnit)
    useTestNG() {
        suites "src/test/resources/unit.testng.xml"
    }
    dependsOn cleanTest
}
